dhall/tests/type-errors/unit/ListLiteralTypesNotMatch.txt
Type error: error: InvalidListElement
 --> <current file>:1:0
  |
1 | [ True, 1 ]
  | ^^^^^^^^^^^ InvalidListElement
  |
